# flow-paste

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.spec-workflow/approvals/flow-paste/: approval_1766065387541_c6s5ma08o.json  approval_1766068174937_em7th3vcq.json  approval_1766068303471_17a2j5axw.json  approval_1766068303556_yrxep44r3.json
.spec-workflow/approvals/flow-paste/.snapshots/design.md/: metadata.json  snapshot-001.json  snapshot-002.json  (+2 more)
.spec-workflow/specs/flow-paste/: design.md  requirements.md  tasks.md
.spec-workflow/specs/flow-paste/Implementation Logs/: task-1_2025-12-18T1522_8a898532.md  task-2_2025-12-18T1522_8a3e9394.md  task-3_2025-12-18T1522_22f6eccc.md  task-4_2025-12-18T1522_d2dc61b9.md
docs/: prd.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: intent.rs  mod.rs  ollama.rs  openai.rs  provider.rs  types.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: ai.rs  clipboard.rs  config.rs  greet.rs  hotkey.rs  mod.rs  privacy.rs  regex.rs
src-tauri/src/config/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/privacy/: masker.rs  mod.rs  patterns.rs  scanner.rs
src-tauri/src/regex/: mod.rs
src/components/: ActionChips.vue  FloatingPanel.vue  ModelBadge.vue  Preview.vue  PrivacyIndicator.vue  SettingsPanel.vue  StreamingOutput.vue
src/lib/: tauri.ts
src/stores/: app.ts
src/styles/: main.css
src/types/: index.ts
src/utils/: logger.ts
(+8 files in other folders)
